DE5593: Article Sorting (Topic Page) related episodes spacing fix

--- a/_assets/stylesheets/pages/_podcast.scss
+++ b/_assets/stylesheets/pages/_podcast.scss
@@ -229,8 +229,13 @@
   }
 
   @media (min-width: $screen-sm) {
-    .feature-cards .card {
-      max-width: 33%;
+    .feature-cards {
+      margin-left: -.5rem;
+      margin-right: -.5rem;
+      
+      .card {
+        max-width: calc(100%/3);
+      }  
     }
   }
 }
